add resume link and add body text and backgoruond color

--- a/index.html
+++ b/index.html
@@ -14,11 +14,38 @@
   <body>
     <nav class="navbar navbar-dark navbarbgcolor ">
         <a class="navbar-brand" href="https://www.linkedin.com/in/david-sackett-5324a911b/">
-          <img src="./rodin.jpg" width="30" height="30" class="d-inline-block align-top navbartext" alt="">
+          <img src="./rodin.jpg" width="30" height="30" class="d-inline-block align-top navbartext" alt="link to david sackett linkedin">
           David Sackett
         </a>
+        <a
+          href="https://github.com/davidsackett14/Portfolio/raw/main/client/src/components/header/resume.pdf"
+          download
+        >
+          download resume
+        </a>
+        <a class="navbar-brand" href="3852267667">
+            
+            385-226-7667
+          </a>
+          
       </nav>
- <div class="bgcolor">words</div>
+      <div class="card">
+        <div class="card-body introbodybgcolor">
+            <p>
+                <i
+                  class="itag"
+                >
+                  Hello
+                </i>
+                , let me introduce myself. I am a student of life and in this season
+                of learning I am exploring the world of web development. I have ran an
+                HVAC company for the last 5 of my 12 years in the industry. I love
+                architecture, building, and creation which has drawn me to the
+                development of web apps. A way to build tangible things where the
+                limits are only in one's mind.
+              </p>
+        </div>
+      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
